# atmosp

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
atmosp/: decorators.py  equations.py  solve.py  tests.py  util.py
atmosp.egg-info/: PKG-INFO
tests/: test_suews_compatibility.py
